@@ -1,3 +1,11 @@
+Mon Jul 23 17:38:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
+          Layout changes
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Layout changes to logging messages
+
 Mon Jul 23 14:01:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
